# C-practice-exercise

./: README.md
Project/: main.c  main.h
Ville-exercices/: CMakeLists.txt  assignment1.c  assignment2.c  assignment3.c  assignment4.c  e3.1.c  e3.2.c  e3.3.c  e3.4.c  e4.1.c  e4.2.c  e4.3.c  e4.4.c  e5.1.c  e5.2.c  e5.3.c  e5.4.c  e6.1.c  e6.2.c  e6.3.c  e6.4.c  e7.1.c  e7.2.c  e7.3.c  e7.4.c
ex4/: ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex18.c  ex19.c  ex21.c  ex7.c  ex8.c  ex9.c
