cmake_minimum_required(VERSION 3.26)
project(Ville_exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(Ville_exercices main.c
        )
add_executable(part2.1
        assignment1.c)
add_executable(part2.2
        assignment2.c)
add_executable(part2.3
        assignment3.c)
add_executable(part2.4
        assignment4.c)
add_executable(part3
        e3.1.c
        e3.2.c
        e3.3.c
        e3.4.c
)
add_executable(part4
        e4.1.c
        e4.2.c
        e4.3.c
        e4.4.c)

add_executable(part5
        e5.1.c
        e5.2.c
        e5.3.c
        e5.4.c)
add_executable(part6
        e6.1.c
        e6.2.c
        e6.3.c
        e6.4.c
)
add_executable(part7
        e7.1.c
        e7.2.c
        e7.3.c
        e7.4.c)